tests/snapshots/examples_fixtures/type_system__failing__76_hm_match_guard_non_bool_compile_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/76_hm_match_guard_non_bool_compile_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Bool with Int.

  --> examples/type_system/failing/76_hm_match_guard_non_bool_compile_mismatch.flx:3:14
  |
3 |         n if 1 -> n,
  |              ^
  |              - expected Bool, found Int
  |              - match guard is known at compile time

Help:
  use a Bool expression, or make the condition/guard explicitly boolean
== stdout ==
<not executed>
